@startuml test
hide circle
skinparam linetype ortho

entity "sales" as sales {
    * <<PK>> id
    --
    * <<FK>> age_group_id : integer
    * <<u>> google_calendar_id    : integer
    * gender  : integer
    created_at      : date
    updated_at      : date
}

entity "age_groups" as age_groups {
    * <<PK>> id
    --
    * name : string
    created_at      : date
    updated_at      : date
}

entity "selected_menus" as selected_menus {
    * <<PK>> id
    --
    * <<FK>> menu_id : integer
    * <<FK>> sale_id : integer
    * price : integer
    created_at      : date
    updated_at      : date
}

entity "menus" as menus {
    * <<PK>> id
    --
    * <<FK>> menu_category_id : integer
    * name : string
    * price : integer
    created_at      : date
    updated_at      : date
}

entity "menu_categories" as menu_categories {
    * <<PK>> id
    --
    * name : string
    created_at      : date
    updated_at      : date
}

sales }|..|| age_groups
sales ||..|{ selected_menus
selected_menus }|..|| menus
menu_categories ||..|{ menus

@enduml
